# videobilder

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  nixpacks.toml  pyproject.toml  railway.toml  run.py
assets/: provider.py
atlanta_vpn_video_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
bot/: formatting.py  handlers.py  main.py  middlewares.py
brand_assets/: README.md  generate_badge.py
config/: logging.py  settings.py
services/: history.py  llm.py  models.py  settings_store.py
subtitles/: ass.py
templates/: library.py
tests/: test_llm_fallback.py  test_subtitles.py  test_templates.py
tts/: base.py  edge.py  factory.py  silent.py
video_generation/: pipeline.py  renderer.py
